--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <body>
         <div class="calc">
             <div class="calc__display">
-                <p class="display__subtext"></p>
                 <p class="display__text">0</p>
             </div>
             <div class="calc__keys">
@@ -33,6 +32,6 @@
                 <button class="number equal">=</button>
             </div>
         </div>
-        <script src="main.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
