--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
         <title>Javascript Calculator</title>
     </head>
     <body>
-        <div class="calc">
+        <div
+            class="calc"
+            data-current-operator="none"
+            data-has-result="false"
+            data-clean="true"
+        >
             <div class="calc__display">
                 <p class="display__text">0</p>
             </div>
@@ -28,8 +33,8 @@
                 <button class="number nine">9</button>
                 <button class="number zero">0</button>
                 <button class="number decimal">.</button>
-                <button class="number clear">C</button>
-                <button class="number equal">=</button>
+                <button class="clear">C</button>
+                <button class="equal">=</button>
             </div>
         </div>
         <script src="js/main.js"></script>
