--- a/index.html
+++ b/index.html
@@ -3,7 +3,10 @@
     <head>
         <meta charset="UTF-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1.0"
+        />
         <link rel="stylesheet" href="styles.css" />
         <title>Javascript Calculator</title>
     </head>
@@ -13,28 +16,73 @@
             data-current-operator="none"
             data-has-result="false"
             data-clean="true"
+            data-decimal="false"
         >
             <div class="calc__display">
                 <p class="display__text">0</p>
             </div>
             <div class="calc__keys">
-                <button class="operator plus">+</button>
-                <button class="operator minus">-</button>
-                <button class="operator times">&times;</button>
-                <button class="operator divide">&divide;</button>
-                <button class="number one">1</button>
-                <button class="number two">2</button>
-                <button class="number three">3</button>
-                <button class="number four">4</button>
-                <button class="number five">5</button>
-                <button class="number six">6</button>
-                <button class="number seven">7</button>
-                <button class="number eight">8</button>
-                <button class="number nine">9</button>
-                <button class="number zero">0</button>
-                <button class="number decimal">.</button>
-                <button class="clear">C</button>
-                <button class="equal">=</button>
+                <button
+                    data-button-type="operator"
+                    class="operator plus"
+                    >+</button
+                >
+                <button
+                    data-button-type="operator"
+                    class="operator minus"
+                    >-</button
+                >
+                <button
+                    data-button-type="operator"
+                    class="operator times"
+                    >&times;</button
+                >
+                <button
+                    data-button-type="operator"
+                    class="operator divide"
+                    >&divide;</button
+                >
+                <button data-button-type="number" class="number one"
+                    >1</button
+                >
+                <button data-button-type="number" class="number two"
+                    >2</button
+                >
+                <button data-button-type="number" class="number three"
+                    >3</button
+                >
+                <button data-button-type="number" class="number four"
+                    >4</button
+                >
+                <button data-button-type="number" class="number five"
+                    >5</button
+                >
+                <button data-button-type="number" class="number six"
+                    >6</button
+                >
+                <button data-button-type="number" class="number seven"
+                    >7</button
+                >
+                <button data-button-type="number" class="number eight"
+                    >8</button
+                >
+                <button data-button-type="number" class="number nine"
+                    >9</button
+                >
+                <button data-button-type="number" class="number zero"
+                    >0</button
+                >
+                <button
+                    data-button-type="decimal"
+                    class="number decimal"
+                    >.</button
+                >
+                <button data-button-type="clear" class="clear"
+                    >C</button
+                >
+                <button data-button-type="equal" class="equal"
+                    >=</button
+                >
             </div>
         </div>
         <script src="js/main.js"></script>
