--- a/index.html
+++ b/index.html
@@ -8,6 +8,15 @@
             content="width=device-width, initial-scale=1.0"
         />
         <link rel="stylesheet" href="styles.css" />
+        <script
+            type="module"
+            src="js/modules/convertToNumbers.js"
+        ></script>
+        <script
+            type="module"
+            src="js/modules/evaluateExpression.js"
+        ></script>
+        <script type="module" src="js/modules/getCurrentExpr.js"></script>
         <title>Javascript Calculator</title>
     </head>
     <body>
@@ -19,27 +28,20 @@
             data-decimal="false"
         >
             <div class="calc__display">
+                <p class="display__text display__text--subtext"></p>
                 <p class="display__text">0</p>
             </div>
             <div class="calc__keys">
-                <button
-                    data-button-type="operator"
-                    class="operator plus"
+                <button data-button-type="operator" class="operator plus"
                     >+</button
                 >
-                <button
-                    data-button-type="operator"
-                    class="operator minus"
+                <button data-button-type="operator" class="operator minus"
                     >-</button
                 >
-                <button
-                    data-button-type="operator"
-                    class="operator times"
+                <button data-button-type="operator" class="operator times"
                     >&times;</button
                 >
-                <button
-                    data-button-type="operator"
-                    class="operator divide"
+                <button data-button-type="operator" class="operator divide"
                     >&divide;</button
                 >
                 <button data-button-type="number" class="number one"
@@ -72,19 +74,13 @@
                 <button data-button-type="number" class="number zero"
                     >0</button
                 >
-                <button
-                    data-button-type="decimal"
-                    class="number decimal"
+                <button data-button-type="decimal" class="number decimal"
                     >.</button
                 >
-                <button data-button-type="clear" class="clear"
-                    >C</button
-                >
-                <button data-button-type="equal" class="equal"
-                    >=</button
-                >
+                <button data-button-type="clear" class="clear">C</button>
+                <button data-button-type="equal" class="equal">=</button>
             </div>
         </div>
-        <script src="js/main.js"></script>
+        <script type="module" src="js/main.js"></script>
     </body>
 </html>
