finished the readme

--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
             type="module"
             src="js/modules/evaluateExpression.js"
         ></script>
-        <script type="module" src="js/modules/getCurrentExpr.js"></script>
+        <script
+            type="module"
+            src="js/modules/getCurrentExpr.js"
+        ></script>
         <title>Javascript Calculator</title>
     </head>
     <body>
@@ -32,16 +35,24 @@
                 <p class="display__text">0</p>
             </div>
             <div class="calc__keys">
-                <button data-button-type="operator" class="operator plus"
+                <button
+                    data-button-type="operator"
+                    class="operator plus"
                     >+</button
                 >
-                <button data-button-type="operator" class="operator minus"
+                <button
+                    data-button-type="operator"
+                    class="operator minus"
                     >-</button
                 >
-                <button data-button-type="operator" class="operator times"
+                <button
+                    data-button-type="operator"
+                    class="operator times"
                     >&times;</button
                 >
-                <button data-button-type="operator" class="operator divide"
+                <button
+                    data-button-type="operator"
+                    class="operator divide"
                     >&divide;</button
                 >
                 <button data-button-type="number" class="number one"
@@ -74,11 +85,17 @@
                 <button data-button-type="number" class="number zero"
                     >0</button
                 >
-                <button data-button-type="decimal" class="number decimal"
+                <button
+                    data-button-type="decimal"
+                    class="number decimal"
                     >.</button
                 >
-                <button data-button-type="clear" class="clear">C</button>
-                <button data-button-type="equal" class="equal">=</button>
+                <button data-button-type="clear" class="clear"
+                    >C</button
+                >
+                <button data-button-type="equal" class="equal"
+                    >=</button
+                >
             </div>
         </div>
         <script type="module" src="js/main.js"></script>
