rewriting event logic

--- a/index.html
+++ b/index.html
@@ -27,8 +27,9 @@
             class="calc"
             data-current-operator="none"
             data-has-result="false"
-            data-clean="true"
+            data-waiting-for-replacement="true"
             data-decimal="false"
+            data-has-result="true"
         >
             <div class="calc__display">
                 <p class="display__text display__text--subtext"></p>
